--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "pg": "^7.5.0",
     "pug": "2.0.0-beta11",
-    "stylus": "0.54.5"
+    "stylus": "0.54.5",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "eslint": "^5.6.1",
